package dev.fizlrock.todo.domain.dto;

/** DeleteCompletedTasksRq */
public record DeleteCompletedTasksRq(String projectId) {}
