package dev.fizlrock.todo.domain.dto;

public record ProjectDeleteRq(String projectId) {}
