package dev.fizlrock.todo.domain.dto;

public record ProjectGetRq(String projectId) {}
