package dev.fizlrock.todo.domain.dto;

import java.util.List;

public record ProjectListResp(List<ProjectMsg> projects) {}
