package dev.fizlrock.todo.domain.dto;

/** ProjectUpdateRq */
public record ProjectUpdateRq(String id, ProjectCreateRq project) {}
