package dev.fizlrock.todo.domain.dto;

import java.util.List;

/** TaskListResp */
public record TaskListResp(List<TaskMsg> tasks) {}
