package dev.fizlrock.todo.domain.dto;

public record TaskRq(String projectId, String taskId) {}
