package dev.fizlrock.todo.domain.dto;

/** TasksInProjectRq */
public record TasksInProjectRq(String projectId) {}
